# pygame_book

./: .gitignore  CLAUDE.md  README.md  main.py  package-lock.json  pyproject.toml
.claude/: screenshot.md
Maze/: 01.py  02.py  04.py  08.py
Maze/texts/: 02.md  03.md  06.md  07.md  main.md
articles/: vscode-article.md  vscode-custom-theme-tutorial.md  vscode-pokemon-color-theme.md  vscode-test copy.md  vscode-test.md
books/: .keep
books/befe8f20bc1411/: config.yaml  example1.md  example2.md  example3.md  example4.md
books/firebase-cli/: config.yaml  example1.md
books/maze_game/: 01.md  04.md  07.md
books/pygame_shooting/: example1.md
books/pygame_tutorial/: config.yaml  example1.md  example2.md  example3.md  example4.md
books/python-rpg-game/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  config.yaml
books/python-rpg-game/src/: .gitignore  01_rpg_start_pygame.py  02_battle_pygame.py  03_multiple_battles_pygame.py  04_magic_pygame.py  05_items_pygame.py  06_levelup_pygame.py  README.md  Taskfile.yml  game_utils.py  pyproject.toml  take_screenshots.py
books/python_basic/: config.yaml  example1.md  example2.md  example3.md  example4.md  example5.md  example6.md
books/python_breakout/: 01.md  02.md  03.md  04.md  05.md  config.yaml
books/python_maze_game/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  config.yaml  main.md
ha_python/t4-2/: t4_2.py
ha_python/講師用/: main.py  parts.py  t4_2.py
scripts/: generate_breakout_images.py  screenshot.py
src_code/python_maze_code/: .gitignore  03.py  06.py  main.py
(+21 files in other folders)
